<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/status_polaczenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="19dp"
        android:text="@string/status_polaczenia" />

    <ImageButton
        android:id="@+id/nadaj"
        android:contentDescription="@string/nadaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/status_polaczenia"
        android:layout_marginTop="146dp"
        android:src="@drawable/push" />

    <TextView
        android:id="@+id/gdy_polaczono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/status_polaczenia"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/status_polaczenia"
        android:layout_marginTop="52dp"
        android:text="@string/gdy_polaczono" />

</RelativeLayout>
